# buckle

./: Cargo.toml  Makefile
examples/: kdiv.rs  t3c.rs
notes/: bernikel-zeigler-div.md  division.md  hd-knuth-div.c  how-to-test.md  mul-karatsuba.md  ref.md
src/: bits.rs  gcd.rs  hex.rs  int.rs  kdiv.rs  lib.rs  nat.rs
